# SoftwareRasterizer

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  SoftwareRasterizer.slnx
SoftwareRasterizer/: DataStructures.h  FrameBuffer.cpp  FrameBuffer.h  SoftwareRasterizer.vcxproj  SoftwareRasterizer.vcxproj.filters  main.cpp
SoftwareRasterizer/Renderer/: Renderer.cpp  Renderer.h
SoftwareRasterizer/Thread/: ThreadPool.cpp  ThreadPool.h
SoftwareRasterizer/Window/: Win32_Window.cpp  Win32_Window.h
SoftwareRasterizer/helper/: ImageData.cpp  ImageData.h  Parser.cpp  Parser.h  SoftwareTexture.h  Timer.cpp  Timer.h
SoftwareRasterizer/math/: Matrix4.h  Utility.h  Vector2.h  Vector3.h  Vector4.h
